--- a/css/article.css
+++ b/css/article.css
@@ -13,8 +13,18 @@
     width: 100%;
     cursor: pointer;
 }
+.articles-image-box{
+    width: 100%;
+    height: 65%;
+    overflow: hidden;
+}
 .article img {
     align-items: center;
     width: 100%;
-    height: 65%;
+    height: 100%;
+    transition: .4s ease all;
+}
+
+.article img:hover{
+    transform: scale(1.05);
 }
