--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@
   --first-color: #0e2342;
   --first-color-alt: #0a58ca;
   --body-color: #fff;
+  --text-color: #0f0f0f;
   /* --title-color:
-  --text-color:
+ 
    */
 
   /*========== typography ==========*/
