--- a/src/components/search/pagination.css
+++ b/src/components/search/pagination.css
@@ -17,7 +17,7 @@
 }
 
 .pagination-currentPage {
-    background-color: #555;
+    background-color: #ccc;
     color: #fff;
     border: 1px solid #ccc ;
     padding: 4px 8px;
