--- a/src/components/search/pagination.css
+++ b/src/components/search/pagination.css
@@ -4,6 +4,7 @@
     gap: .5rem;
     justify-content: center;
     font-size: var(--normal-font-size);
+    margin: 1.5rem 0;
 }
 .pagination-numbers{
     border: 1px solid #ccc ;
