--- a/src/components/helpers/errorserver.css
+++ b/src/components/helpers/errorserver.css
@@ -5,9 +5,14 @@
 }
 .serverError-container{
     display: grid;
-    grid-template-columns: 50% 50%;  
     align-items: center;
-    width: 50%;  
+     row-gap: 1rem;
+}
+@media (min-width: 992px) {
+    .serverError-container{
+        grid-template-columns: 50% 50%;  
+        width: 50%;   
+    }
 }
 .serverError-info{
     color: var(--first-color);
