--- a/src/components/search/post/postresult.css
+++ b/src/components/search/post/postresult.css
@@ -3,22 +3,19 @@
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-    gap: 36px 24px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 32px 16px;
     height: 100%;
     font-family: 'Roboto', sans-serif;
-    
 }
 .article {
     height: 100%;
-    width: 270px;
-    margin: 0 auto;
+    width: 100%;
     cursor: pointer;
-    
 }
 .articles-image-box{
-    max-width: 100%;
-    height: 170px;
+    width: 100%;
+    height: 65%;
     overflow: hidden;
 }
 .article img {
@@ -32,15 +29,10 @@
     transform: scale(1.05);
 }
 .article-date{
-    font-size: var(--small-font-size);
     font-weight: 300;
-    margin: 0;
-    margin-top: .5rem;
 }
 .article-headline{
     font-size: var(--normal-font-size);
     color: var(--text-color);
-    font-weight: 700;
-    margin: 0;
-    margin-top: .5rem;
+    font-weight: 400;
 }
