--- a/src/components/homepage/homepage.css
+++ b/src/components/homepage/homepage.css
@@ -1,12 +1,12 @@
-.box-big-imagen{
-overflow: hidden;
-display: flex;
-align-items: center;
-justify-content: center;
-position: relative;
+.box-big-imagen {
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
-.content-big-imagen{
+.content-big-imagen {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -19,45 +19,45 @@ position: relative;
 
 .image-big {
     cursor: pointer;
-    transition: .5s ease all;
+    transition: 0.5s ease all;
 }
 
-.image-big:hover{
+.image-big:hover {
     transform: scale(1.1);
 }
 
-.box-little-image{
+.box-little-image {
     overflow: hidden;
-    font-family: Poppins,sans-serif;
+    font-family: Poppins, sans-serif;
     height: 200px;
     min-height: 200px;
 }
 
-.image-square{
+.image-square {
     cursor: pointer;
-    transition: .5s ease all;
+    transition: 0.5s ease all;
 }
-.image-square:hover{
+.image-square:hover {
     transform: scale(1.2);
 }
 
-.content-square{    
+.content-square {
     cursor: pointer;
 }
 
-.content-square-text{
-    font-family: 'Montserrat', sans-serif;
+.content-square-text {
+    font-family: "Montserrat", sans-serif;
     font-weight: 800;
-    transition: .6s ease all;
+    transition: 0.6s ease all;
     color: #0e2342;
 }
-.content-square-text:hover{
-   text-decoration: underline;
+.content-square-text:hover {
+    text-decoration: underline;
 }
 
 /**SLIDER*/
 
-  .swiper {
+/* .swiper {
     width: 100%;
     height: 100%;
   }
@@ -65,10 +65,10 @@ position: relative;
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
-  
-    /* Center slide text vertically */
-    display: flex;
+    background: #fff; */
+
+/* Center slide text vertically */
+/* display: flex;
     justify-content: center;
     align-items: center;
   }
@@ -99,6 +99,4 @@ position: relative;
 
   .content {
     height: 100px;
-  }
-
-  
+  } */
