--- a/src/components/search/articles/article.css
+++ b/src/components/search/articles/article.css
@@ -1,63 +1,91 @@
 .articles {
     list-style: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
     gap: 36px 24px;
     height: 100%;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
+}
+@media (min-width: 615px) {
+    .articles {
+        grid-template-columns: repeat(auto-fit, minmax(270px, 270px));
+        max-width: 564px;
+    }
+}
+@media (min-width: 992px) {
+    .articles {
+        max-width: 858px;
+    }
+}
+@media (min-width: 1250px) {
+    .articles {
+        max-width: 100%;
+    }
 }
 .article {
-    height: 100%;
-    width: 270px;
+    max-height: 100%;
+    width: 80%;
     margin: 0 auto;
     cursor: pointer;
-    
 }
-.articles-image-box{
+.articles-image-box {
     max-width: 100%;
-    height: 170px;
+    height: 60%;
     overflow: hidden;
+    object-fit: cover;
+}
+@media (min-width: 615px) {
+    .article {
+        height: 100%;
+        width: 270px;
+        margin: 0 auto;
+        cursor: pointer;
+    }
+    .articles-image-box {
+        max-width: 100%;
+        height: 170px;
+        overflow: hidden;
+    }
 }
 .article img {
     align-items: center;
     width: 100%;
     height: 100%;
-    transition: .4s ease all;
+    transition: 0.4s ease all;
 }
 
-.article img:hover{
+.article img:hover {
     transform: scale(1.05);
 }
-.article-source_div{
+.article-source_div {
     display: grid;
     grid-template-columns: 1fr 100px;
 }
-.article-source{
+.article-source {
     font-size: var(--normal-font-size);
     color: #dc3545;
     margin: 0;
-    margin-top: .5rem;
+    margin-top: 0.5rem;
     font-weight: 700;
 }
-.article-date{
+.article-date {
     font-size: var(--small-font-size);
     font-weight: 300;
     margin: 0;
-    margin-top: .5rem;
+    margin-top: 0.5rem;
     text-align: center;
 }
-.article-views{
+.article-views {
     margin: 0;
-    margin-top: .5rem;
+    margin-top: 0.5rem;
     font-weight: 300;
     font-size: var(--smaller-font-size);
 }
-.article-headline{
+.article-headline {
     font-size: var(--normal-font-size);
     color: var(--text-color);
     font-weight: 700;
     margin: 0;
-    margin-top: .5rem;
+    margin-top: 0.5rem;
 }
